# model

./: embedding_server.py  main.py  pyproject.toml  render.yaml  requirements.txt
